@@ -1,0 +1,5 @@
+#value_indexed
+RTC_BSM_DISABLED	0
+RTC_BSM_DIRECT		1
+RTC_BSM_LEVEL		2
+RTC_BSM_STANDBY		3
