@@ -1,0 +1,10 @@
+#value_indexed
+RTC_FEATURE_ALARM		0
+RTC_FEATURE_ALARM_RES_MINUTE	1
+RTC_FEATURE_NEED_WEEK_DAY	2
+RTC_FEATURE_ALARM_RES_2S	3
+RTC_FEATURE_UPDATE_INTERRUPT	4
+RTC_FEATURE_CORRECTION		5
+RTC_FEATURE_BACKUP_SWITCH_MODE	6
+RTC_FEATURE_ALARM_WAKEUP_ONLY	7
+/* RTC_FEATURE_CNT - non-UAPI */
