@@ -1,0 +1,9 @@
+1<<RTC_FEATURE_ALARM
+1<<RTC_FEATURE_ALARM_RES_MINUTE
+1<<RTC_FEATURE_NEED_WEEK_DAY
+1<<RTC_FEATURE_ALARM_RES_2S
+1<<RTC_FEATURE_UPDATE_INTERRUPT
+1<<RTC_FEATURE_CORRECTION
+1<<RTC_FEATURE_BACKUP_SWITCH_MODE
+1<<RTC_FEATURE_ALARM_WAKEUP_ONLY
+/* RTC_FEATURE_CNT - non-UAPI */
