@@ -20,3 +20,5 @@ RTC_PLL_GET	_IOR('p', 0x11, struct_rtc_pll_info)
 RTC_PLL_SET	_IOW('p', 0x12, struct_rtc_pll_info)
 RTC_VL_READ	_IOR('p', 0x13, unsigned int)
 RTC_VL_CLR	_IO ('p', 0x14)
+RTC_PARAM_GET	_IOW('p', 0x13, struct_rtc_param)
+RTC_PARAM_SET	_IOW('p', 0x14, struct_rtc_param)
