@@ -1,0 +1,4 @@
+#value_indexed
+RTC_PARAM_FEATURES		0
+RTC_PARAM_CORRECTION		1
+RTC_PARAM_BACKUP_SWITCH_MODE	2
